# Qt-Cpp-Plugin-System

./: .gitignore  CMakeLists.txt  FirstPlugin.cpp  FirstPlugin.h  IPlugin.h  LICENSE  PluginLoader.cpp  PluginLoader.h  README.md  SecondPlugin.cpp  SecondPlugin.h  StringFace.cpp  StringFace.h  TestPlugin.cpp  TestPlugin.h  main.cpp
plugins/: TestPlugin.h
tests/: BenchmarkRun.cpp  BenchmarkRun.h  TestCase.h
tests/benchmarks/: ContextSwitchBenchmark.h  ContextSwitchReturnTypeBenchmark.h  EnableAndDisableBenchmark.h  LoadAndUnloadBenchmark.h
tests/util/: Stopwatch.cpp  Stopwatch.h
